Account API test spec cleanup

--- a/tests/account/account.config
+++ b/tests/account/account.config
@@ -1,6 +1,27 @@
 {
-    "createAccountBaseUrl": "https://orchcca.dev.telematicsct.com",
-    "updateAccountBaseUrl": "https://orchcu.dev.telematicsct.com",
-    "apiEndPoint": "/v1/account"
+    "DEV": {
+        "createAccountBaseUrl": "https://orchcca.dev.telematicsct.com",
+        "updateAccountBaseUrl": "https://orchcu.dev.telematicsct.com",
+        "apiEndPoint": "/v1/account",
+        "authKey": ""
+    },
+    "QA": {
+        "createAccountBaseUrl": "https://orchcca.qa.telematicsct.com",
+        "updateAccountBaseUrl": "https://orchcu.qa.telematicsct.com",
+        "apiEndPoint": "/v1/account",
+        "authKey": ""
+    },
+    "STG": {
+        "createAccountBaseUrl": "https://orchcca.stg.telematicsct.com",
+        "updateAccountBaseUrl": "https://orchcu.stg.telematicsct.com",
+        "apiEndPoint": "/v1/account",
+        "authKey": ""
+    },
+    "PRD": {
+        "createAccountBaseUrl": "https://orchcca.telematicsct.com",
+        "updateAccountBaseUrl": "https://orchcu.telematicsct.com",
+        "apiEndPoint": "/v1/account",
+        "authKey": ""
+    } 
 }
 
