--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "chai": "^4.1.2",
+    "dotenv": "^6.2.0",
     "mocha": "^5.2.0",
     "mochawesome": "^3.0.2",
     "supertest": "^3.1.0",
