--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Test Suite for CT APIs",
   "main": "index.js",
   "scripts": {
-    "test": "mocha 'tests/**/*.js'",
+    "test": "mocha 'tests/subscription/*.js'",
     "posttest": "open 'mochawesome-report/mochawesome.html'"
   },
   "repository": {
@@ -21,6 +21,7 @@
     "dotenv": "^6.2.0",
     "mocha": "^5.2.0",
     "mochawesome": "^3.0.2",
+    "request": "^2.88.0",
     "supertest": "^3.1.0",
     "tv4": "^1.3.0"
   },
