--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Test Suite for CT APIs",
   "main": "index.js",
   "scripts": {
-    "test": "mocha 'tests/subscription/*.js'",
+    "test": "mocha 'tests/account/account.spec.js'",
     "posttest": "open 'mochawesome-report/mochawesome.html'"
   },
   "repository": {
