Create/Cancel Subscription tests added

--- a/api-service/config.stg.json
+++ b/api-service/config.stg.json
@@ -5,6 +5,7 @@
 
     "subscriptionPreviewUrl": "https://spreview.stg.telematicsct.com",
     "orchestrationApiBaseUrl" : "https://orchsub.stg.telematicsct.com",
-    "subPreviewEndPoint": "/v1/subscriptions"
+    "subPreviewEndPoint": "/v1/subscriptions",
+    "subscriptionEndPoint": "/subscription/v1/subscriptions"    
 }
 
