--- a/api-service/config.qa.json
+++ b/api-service/config.qa.json
@@ -5,6 +5,7 @@
 
     "subscriptionPreviewUrl": "https://spreview.qa.telematicsct.com",
     "orchestrationApiBaseUrl" : "https://orchsub.qa.telematicsct.com",
-    "subPreviewEndPoint": "/v1/subscriptions"
+    "subPreviewEndPoint": "/v1/subscriptions",
+    "subscriptionEndPoint": "/subscription/v1/subscriptions"
 }
 
