--- a/api-service/config.qa.json
+++ b/api-service/config.qa.json
@@ -10,6 +10,9 @@
     "subscriptionEndPoint": "/subscription/v1/subscriptions",
 
     "zuoraPreviewUrl": "https://zuorapreview.qa.telematicsct.com",
-    "zuoraPreviewEndPoint": "/v1/preview"
+    "zuoraPreviewEndPoint": "/v1/preview",
+
+    "racUrl": "https://rac.qa.telematicsct.com",
+    "racEndPoint": "/authcode/v1/remote"
 }
 
