--- a/api-service/config.stg.json
+++ b/api-service/config.stg.json
@@ -4,7 +4,7 @@
     "searchAccountBaseUrl": "https://orchcd.stg.telematicsct.com",
     "apiEndPoint": "/v1/account",
 
-    "subscriptionPreviewUrl": "https://spreview.stg.telematicsct.com",
+    "subscriptionPreviewUrl": "https://api.stg.telematicsct.com",
     "orchestrationApiBaseUrl" : "https://orchsub.stg.telematicsct.com",
     "subPreviewEndPoint": "/v1/subscriptions",
     "subscriptionEndPoint": "/subscription/v1/subscriptions",
@@ -16,6 +16,10 @@
     "racEndPoint": "/authcode/v1/remote",
 
     "overrideRACUrl": "https://orchrac.stg.telematicsct.com",
-    "overrideRACEndPoint": "/authcode/v1/remote"
+    "overrideRACEndPoint": "/authcode/v1/remote",
+
+    "ctApiGateway": "https://api.stg.telematicsct.com",
+    "oAuthApiUrl" : "https://sts.windows.net",
+    "oAuthApiEndPoint":"/f855c7e1-6646-4300-8de1-10c7d3001287/oauth2/token"
 }
 
