--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Test Suite for CT APIs",
   "main": "index.js",
   "scripts": {
+    "test": "mocha 'tests/index.spec.js' -t 10000",
     "testaccount": "mocha 'tests/account/*.spec.js' -t 10000",
     "testrac": "mocha 'tests/rac/*.spec.js' -t 10000",
+    "testpreview": "mocha 'tests/subscription/sub-preview.spec.js' -t 10000",
     "testsub": "mocha 'tests/subscription/subscription.spec.js' -t 10000",
     "posttest": "open 'mochawesome-report/mochawesome.html'"
   },
@@ -26,7 +28,8 @@
     "moment": "^2.24.0",
     "request": "^2.88.0",
     "supertest": "^3.1.0",
-    "tv4": "^1.3.0"
+    "tv4": "^1.3.0",
+    "uuid": "^3.3.2"
   },
   "homepage": "https://github.com/karthikvtc/pg-crm-ct-testsuite#readme"
 }
